// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataBlock datablock renders downloads only 1`] = `

<div class="govuk-datablock"
     data-testid="DataBlock "
>
  <div class="govuk-tabs">
    <ul class="govuk-tabs__list"
        role="tablist"
    >
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a class="govuk-tabs__tab govuk-tabs__tab--selected"
           href="#datablock_test_downloads"
           id="datablock_test_downloads-tab"
           aria-controls="datablock_test_downloads"
           aria-selected="true"
           role="tab"
        >
          Data downloads
        </a>
      </li>
    </ul>
    <section class="govuk-tabs__panel panel"
             id="datablock_test_downloads"
             data-testid="Data downloads"
             aria-labelledby="datablock_test_downloads-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data downloads
      </h3>
      <p>
        You can customise and download data as Excel, .csv or .pdf files. Our data can also be accessed via an API.
      </p>
      <div class="govuk-inset-text">
        Data downloads have not yet been implemented within the service.
      </div>
    </section>
  </div>
</div>

`;

exports[`DataBlock datablock renders horizontal chart 1`] = `

<div class="govuk-datablock"
     data-testid="DataBlock "
>
  <div class="govuk-tabs">
    <ul class="govuk-tabs__list"
        role="tablist"
    >
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a aria-controls="datablock_test_charts"
           aria-selected="true"
           role="tab"
           class="govuk-tabs__tab govuk-tabs__tab--selected"
           href="#datablock_test_charts"
           id="datablock_test_charts-tab"
        >
          Charts
        </a>
      </li>
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a class="govuk-tabs__tab"
           href="#datablock_test_downloads"
           id="datablock_test_downloads-tab"
           aria-controls="datablock_test_downloads"
           aria-selected="false"
           role="tab"
           tabindex="-1"
        >
          Data downloads
        </a>
      </li>
    </ul>
    <section class="govuk-tabs__panel panel"
             id="datablock_test_charts"
             data-testid="Charts"
             aria-labelledby="datablock_test_charts-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Charts
      </h3>
      <h3>
      </h3>
      <div class="recharts-responsive-container"
           style="width: 800px; height: 600px;"
      >
        <div class="recharts-wrapper"
             style="position: relative; cursor: default; width: 800px; height: 600px;"
        >
          <svg class="recharts-surface"
               width="800"
               height="600"
               viewbox="0 0 800 600"
               version="1.1"
          >
            <defs>
              <clipPath id="recharts1-clip">
                <rect x="175"
                      y="15"
                      height="485"
                      width="595"
                >
                </rect>
              </clipPath>
            </defs>
            <g class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis">
              <line class="recharts-cartesian-axis-line"
                    width="115"
                    height="485"
                    x="60"
                    y="15"
                    stroke="#666"
                    fill="none"
                    x1="175"
                    y1="15"
                    x2="175"
                    y2="500"
              >
              </line>
              <g class="recharts-cartesian-axis-ticks">
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="485"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="136.25"
                        x2="175"
                        y2="136.25"
                  >
                  </line>
                  <text width="115"
                        height="485"
                        x="167"
                        y="136.25"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      2014/15
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="485"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="378.75"
                        x2="175"
                        y2="378.75"
                  >
                  </line>
                  <text width="115"
                        height="485"
                        x="167"
                        y="378.75"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      2015/16
                    </tspan>
                  </text>
                </g>
              </g>
              <text x="55"
                    y="257.5"
                    transform="rotate(270, 55, 257.5)"
                    class="recharts-text recharts-label"
                    text-anchor="end"
              >
                <tspan x="55"
                       dy="0.355em"
                >
                  test y axis
                </tspan>
              </text>
            </g>
            <g class="recharts-cartesian-grid">
              <g class="recharts-cartesian-grid-horizontal">
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="175"
                      y1="136.25"
                      x2="770"
                      y2="136.25"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="175"
                      y1="378.75"
                      x2="770"
                      y2="378.75"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="175"
                      y1="15"
                      x2="770"
                      y2="15"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="175"
                      y1="500"
                      x2="770"
                      y2="500"
                >
                </line>
              </g>
              <g class="recharts-cartesian-grid-vertical">
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="175"
                      y1="15"
                      x2="175"
                      y2="500"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="323.75"
                      y1="15"
                      x2="323.75"
                      y2="500"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="472.5"
                      y1="15"
                      x2="472.5"
                      y2="500"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="621.25"
                      y1="15"
                      x2="621.25"
                      y2="500"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="485"
                      x1="770"
                      y1="15"
                      x2="770"
                      y2="500"
                >
                </line>
              </g>
            </g>
            <g class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis">
              <line class="recharts-cartesian-axis-line"
                    height="50"
                    width="595"
                    x="175"
                    y="500"
                    stroke="#666"
                    fill="none"
                    x1="175"
                    y1="500"
                    x2="770"
                    y2="500"
              >
              </line>
              <g class="recharts-cartesian-axis-ticks">
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="500"
                        stroke="#666"
                        fill="none"
                        x1="175"
                        y1="506"
                        x2="175"
                        y2="500"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="175"
                        y="508"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="175"
                           dy="0.71em"
                    >
                      0
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="500"
                        stroke="#666"
                        fill="none"
                        x1="323.75"
                        y1="506"
                        x2="323.75"
                        y2="500"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="323.75"
                        y="508"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="323.75"
                           dy="0.71em"
                    >
                      5
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="500"
                        stroke="#666"
                        fill="none"
                        x1="472.5"
                        y1="506"
                        x2="472.5"
                        y2="500"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="472.5"
                        y="508"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="472.5"
                           dy="0.71em"
                    >
                      10
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="500"
                        stroke="#666"
                        fill="none"
                        x1="621.25"
                        y1="506"
                        x2="621.25"
                        y2="500"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="621.25"
                        y="508"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="621.25"
                           dy="0.71em"
                    >
                      15
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="500"
                        stroke="#666"
                        fill="none"
                        x1="770"
                        y1="506"
                        x2="770"
                        y2="500"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="770"
                        y="508"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="770"
                           dy="0.71em"
                    >
                      20
                    </tspan>
                  </text>
                </g>
              </g>
              <text x="472.5"
                    y="545"
                    class="recharts-text recharts-label"
                    text-anchor="middle"
              >
                <tspan x="472.5"
                       dy="0em"
                >
                  test x axis
                </tspan>
              </text>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#4763a5"
                        width="89.25"
                        height="194"
                        x="175"
                        y="39.25"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 175,39.25 h 89.25 v 194 h -89.25 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#4763a5"
                        width="89.25"
                        height="194"
                        x="175"
                        y="281.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 175,281.75 h 89.25 v 194 h -89.25 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#f5a450"
                        width="297.5"
                        height="194"
                        x="264.25"
                        y="39.25"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 264.25,39.25 h 297.5 v 194 h -297.5 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#f5a450"
                        width="297.5"
                        height="194"
                        x="264.25"
                        y="281.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 264.25,281.75 h 297.5 v 194 h -297.5 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#005ea5"
                        width="148.75"
                        height="194"
                        x="561.75"
                        y="39.25"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 561.75,39.25 h 148.75 v 194 h -148.75 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#005ea5"
                        width="148.75"
                        height="194"
                        x="561.75"
                        y="281.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 561.75,281.75 h 148.75 v 194 h -148.75 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
          </svg>
          <div class="recharts-legend-wrapper"
               style="position: absolute; width: 710px; height: auto; left: 60px; bottom: 50px;"
          >
            <ul class="recharts-default-legend"
                style="padding: 0px; margin: 0px; text-align: center;"
            >
              <li class="recharts-legend-item legend-item-0"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#4763a5"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Unauthorised absence rate
                </span>
              </li>
              <li class="recharts-legend-item legend-item-1"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#f5a450"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Overall absence rate
                </span>
              </li>
              <li class="recharts-legend-item legend-item-2"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#005ea5"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Authorised absence rate
                </span>
              </li>
            </ul>
          </div>
          <div class="recharts-tooltip-wrapper"
               style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
          >
            <div class="recharts-default-tooltip"
                 style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
            >
              <p class="recharts-tooltip-label"
                 style="margin: 0px;"
              >
              </p>
            </div>
          </div>
        </div>
        <div style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;">
        </div>
      </div>
    </section>
    <section class="govuk-tabs__panel panel govuk-tabs__panel--hidden"
             id="datablock_test_downloads"
             data-testid="Data downloads"
             aria-labelledby="datablock_test_downloads-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data downloads
      </h3>
      <p>
        You can customise and download data as Excel, .csv or .pdf files. Our data can also be accessed via an API.
      </p>
      <div class="govuk-inset-text">
        Data downloads have not yet been implemented within the service.
      </div>
    </section>
  </div>
</div>

`;

exports[`DataBlock datablock renders map 1`] = `

<div class="govuk-datablock"
     data-testid="DataBlock "
>
  <div class="govuk-tabs">
    <ul class="govuk-tabs__list"
        role="tablist"
    >
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a aria-controls="datablock_test_charts"
           aria-selected="true"
           role="tab"
           class="govuk-tabs__tab govuk-tabs__tab--selected"
           href="#datablock_test_charts"
           id="datablock_test_charts-tab"
        >
          Charts
        </a>
      </li>
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a class="govuk-tabs__tab"
           href="#datablock_test_downloads"
           id="datablock_test_downloads-tab"
           aria-controls="datablock_test_downloads"
           aria-selected="false"
           role="tab"
           tabindex="-1"
        >
          Data downloads
        </a>
      </li>
    </ul>
    <section class="govuk-tabs__panel panel"
             id="datablock_test_charts"
             data-testid="Charts"
             aria-labelledby="datablock_test_charts-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Charts
      </h3>
      <h3>
      </h3>
      <div class="govuk-grid-row">
        <div class="govuk-grid-column-one-third"
             aria-live="assertive"
        >
          <form>
            <div class="govuk-form-group govuk-!-margin-bottom-6">
              <label class="govuk-label"
                     for="selectedLocation"
              >
                Select a location
              </label>
              <select class="govuk-select select"
                      id="selectedLocation"
                      name="selectedLocation"
              >
                <option value>
                  All
                </option>
                <option value="E92000001">
                  England
                </option>
              </select>
            </div>
          </form>
        </div>
        <div class="govuk-grid-column-two-thirds">
          <div style="width: 800px; height: 600px; position: relative;"
               class="leaflet-container leaflet-grab leaflet-touch-drag"
               tabindex="0"
          >
            <div class="leaflet-pane leaflet-map-pane"
                 style="left: 0px; top: 0px;"
            >
              <div class="leaflet-pane leaflet-tile-pane">
              </div>
              <div class="leaflet-pane leaflet-shadow-pane">
              </div>
              <div class="leaflet-pane leaflet-overlay-pane">
                <svg pointer-events="none"
                     width="0"
                     height="0"
                     style="left: 0px; top: 0px;"
                     viewbox="0 0 0 0"
                >
                  <g>
                    <path class="leaflet-interactive"
                          stroke="#3388ff"
                          stroke-opacity="1"
                          stroke-width="3"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          fill="#3388ff"
                          fill-opacity="0.2"
                          fill-rule="evenodd"
                          d="M0 0"
                    >
                    </path>
                    <path class="leaflet-interactive"
                          stroke="777"
                          stroke-opacity="1"
                          stroke-width="1"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          fill="777"
                          fill-opacity="0.2"
                          fill-rule="evenodd"
                          d="M-1 1L-1 -1L1 -1L1 1z"
                    >
                    </path>
                  </g>
                </svg>
              </div>
              <div class="leaflet-pane leaflet-marker-pane">
              </div>
              <div class="leaflet-pane leaflet-tooltip-pane">
              </div>
              <div class="leaflet-pane leaflet-popup-pane">
              </div>
            </div>
            <div class="leaflet-control-container">
              <div class="leaflet-top leaflet-left">
                <div class="leaflet-control-zoom leaflet-bar leaflet-control">
                  <a class="leaflet-control-zoom-in"
                     href="#"
                     title="Zoom in"
                     role="button"
                     aria-label="Zoom in"
                  >
                    +
                  </a>
                  <a class="leaflet-control-zoom-out"
                     href="#"
                     title="Zoom out"
                     role="button"
                     aria-label="Zoom out"
                  >
                    −
                  </a>
                </div>
              </div>
              <div class="leaflet-top leaflet-right">
              </div>
              <div class="leaflet-bottom leaflet-left">
              </div>
              <div class="leaflet-bottom leaflet-right">
                <div class="leaflet-control-attribution leaflet-control">
                  <a href="https://leafletjs.com"
                     title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section class="govuk-tabs__panel panel govuk-tabs__panel--hidden"
             id="datablock_test_downloads"
             data-testid="Data downloads"
             aria-labelledby="datablock_test_downloads-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data downloads
      </h3>
      <p>
        You can customise and download data as Excel, .csv or .pdf files. Our data can also be accessed via an API.
      </p>
      <div class="govuk-inset-text">
        Data downloads have not yet been implemented within the service.
      </div>
    </section>
  </div>
</div>

`;

exports[`DataBlock datablock renders table 1`] = `

<div class="govuk-datablock"
     data-testid="DataBlock "
>
  <div class="govuk-tabs">
    <ul class="govuk-tabs__list"
        role="tablist"
    >
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a aria-controls="datablock_test_tables"
           aria-selected="true"
           role="tab"
           class="govuk-tabs__tab govuk-tabs__tab--selected"
           href="#datablock_test_tables"
           id="datablock_test_tables-tab"
        >
          Data tables
        </a>
      </li>
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a class="govuk-tabs__tab"
           href="#datablock_test_downloads"
           id="datablock_test_downloads-tab"
           aria-controls="datablock_test_downloads"
           aria-selected="false"
           role="tab"
           tabindex="-1"
        >
          Data downloads
        </a>
      </li>
    </ul>
    <section class="govuk-tabs__panel panel"
             id="datablock_test_tables"
             data-testid="Data tables"
             aria-labelledby="datablock_test_tables-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data tables
      </h3>
      <h3>
      </h3>
      <table class="govuk-table">
        <caption class="govuk-heading-s">
          Table representing
        </caption>
        <thead class="govuk-table__head">
          <tr>
            <th class="govuk-table__header">
            </th>
            <th class="govuk-table__header govuk-table__cell--numeric"
                scope="col"
            >
              2014/15
            </th>
            <th class="govuk-table__header govuk-table__cell--numeric"
                scope="col"
            >
              2015/16
            </th>
          </tr>
        </thead>
        <tbody class="govuk-table__body">
          <tr class="govuk-table__row ">
            <th class="govuk-table__header">
              Unauthorised absence rate
            </th>
            <td class="govuk-table__cell govuk-table__cell--numeric">
              3
            </td>
            <td class="govuk-table__cell govuk-table__cell--numeric">
              3
            </td>
          </tr>
          <tr class="govuk-table__row ">
            <th class="govuk-table__header">
              Overall absence rate
            </th>
            <td class="govuk-table__cell govuk-table__cell--numeric">
              10
            </td>
            <td class="govuk-table__cell govuk-table__cell--numeric">
              10
            </td>
          </tr>
          <tr class="govuk-table__row ">
            <th class="govuk-table__header">
              Authorised absence rate
            </th>
            <td class="govuk-table__cell govuk-table__cell--numeric">
              5
            </td>
            <td class="govuk-table__cell govuk-table__cell--numeric">
              5
            </td>
          </tr>
        </tbody>
      </table>
    </section>
    <section class="govuk-tabs__panel panel govuk-tabs__panel--hidden"
             id="datablock_test_downloads"
             data-testid="Data downloads"
             aria-labelledby="datablock_test_downloads-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data downloads
      </h3>
      <p>
        You can customise and download data as Excel, .csv or .pdf files. Our data can also be accessed via an API.
      </p>
      <div class="govuk-inset-text">
        Data downloads have not yet been implemented within the service.
      </div>
    </section>
  </div>
</div>

`;

exports[`DataBlock datablock renders vertical chart 1`] = `

<div class="govuk-datablock"
     data-testid="DataBlock "
>
  <div class="govuk-tabs">
    <ul class="govuk-tabs__list"
        role="tablist"
    >
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a aria-controls="datablock_test_charts"
           aria-selected="true"
           role="tab"
           class="govuk-tabs__tab govuk-tabs__tab--selected"
           href="#datablock_test_charts"
           id="datablock_test_charts-tab"
        >
          Charts
        </a>
      </li>
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a class="govuk-tabs__tab"
           href="#datablock_test_downloads"
           id="datablock_test_downloads-tab"
           aria-controls="datablock_test_downloads"
           aria-selected="false"
           role="tab"
           tabindex="-1"
        >
          Data downloads
        </a>
      </li>
    </ul>
    <section class="govuk-tabs__panel panel"
             id="datablock_test_charts"
             data-testid="Charts"
             aria-labelledby="datablock_test_charts-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Charts
      </h3>
      <h3>
      </h3>
      <div class="recharts-responsive-container"
           style="width: 800px; height: 300px;"
      >
        <div class="recharts-wrapper"
             style="position: relative; cursor: default; width: 800px; height: 300px;"
        >
          <svg class="recharts-surface"
               width="800"
               height="300"
               viewbox="0 0 800 300"
               version="1.1"
          >
            <defs>
              <clipPath id="recharts8-clip">
                <rect x="175"
                      y="15"
                      height="185"
                      width="595"
                >
                </rect>
              </clipPath>
            </defs>
            <g class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis">
              <line class="recharts-cartesian-axis-line"
                    height="50"
                    width="595"
                    x="175"
                    y="200"
                    stroke="#666"
                    fill="none"
                    x1="175"
                    y1="200"
                    x2="770"
                    y2="200"
              >
              </line>
              <g class="recharts-cartesian-axis-ticks">
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="200"
                        stroke="#666"
                        fill="none"
                        x1="323.75"
                        y1="206"
                        x2="323.75"
                        y2="200"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="323.75"
                        y="208"
                        stroke="none"
                        fill="#666"
                        font-size="12"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="323.75"
                           dy="0.71em"
                    >
                      2014/15
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="200"
                        stroke="#666"
                        fill="none"
                        x1="621.25"
                        y1="206"
                        x2="621.25"
                        y2="200"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="621.25"
                        y="208"
                        stroke="none"
                        fill="#666"
                        font-size="12"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="621.25"
                           dy="0.71em"
                    >
                      2015/16
                    </tspan>
                  </text>
                </g>
              </g>
              <text x="472.5"
                    y="245"
                    class="recharts-text recharts-label"
                    text-anchor="middle"
              >
                <tspan x="472.5"
                       dy="0em"
                >
                  test x axis
                </tspan>
              </text>
            </g>
            <g class="recharts-cartesian-grid">
              <g class="recharts-cartesian-grid-horizontal">
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="200"
                      x2="770"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="153.75"
                      x2="770"
                      y2="153.75"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="107.5"
                      x2="770"
                      y2="107.5"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="61.25"
                      x2="770"
                      y2="61.25"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="15"
                      x2="770"
                      y2="15"
                >
                </line>
              </g>
              <g class="recharts-cartesian-grid-vertical">
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="323.75"
                      y1="15"
                      x2="323.75"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="621.25"
                      y1="15"
                      x2="621.25"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="15"
                      x2="175"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="770"
                      y1="15"
                      x2="770"
                      y2="200"
                >
                </line>
              </g>
            </g>
            <g class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis">
              <line class="recharts-cartesian-axis-line"
                    width="115"
                    height="185"
                    x="60"
                    y="15"
                    stroke="#666"
                    fill="none"
                    x1="175"
                    y1="15"
                    x2="175"
                    y2="200"
              >
              </line>
              <g class="recharts-cartesian-axis-ticks">
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="200"
                        x2="175"
                        y2="200"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="200"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      0
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="153.75"
                        x2="175"
                        y2="153.75"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="153.75"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      3
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="107.5"
                        x2="175"
                        y2="107.5"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="107.5"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      6
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="61.25"
                        x2="175"
                        y2="61.25"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="61.25"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      9
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="15"
                        x2="175"
                        y2="15"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="15"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      12
                    </tspan>
                  </text>
                </g>
              </g>
              <text x="55"
                    y="107.5"
                    transform="rotate(270, 55, 107.5)"
                    class="recharts-text recharts-label"
                    text-anchor="end"
              >
                <tspan x="55"
                       dy="0.355em"
                >
                  test y axis
                </tspan>
              </text>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#4763a5"
                        width="76"
                        height="46.25"
                        x="204.75"
                        y="153.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 204.75,153.75 h 76 v 46.25 h -76 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#4763a5"
                        width="76"
                        height="46.25"
                        x="502.25"
                        y="153.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 502.25,153.75 h 76 v 46.25 h -76 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#f5a450"
                        width="76"
                        height="154.16666666666669"
                        x="284.75"
                        y="45.833333333333314"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 284.75,45.833333333333314 h 76 v 154.16666666666669 h -76 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#f5a450"
                        width="76"
                        height="154.16666666666669"
                        x="582.25"
                        y="45.833333333333314"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 582.25,45.833333333333314 h 76 v 154.16666666666669 h -76 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#005ea5"
                        width="76"
                        height="77.08333333333334"
                        x="364.75"
                        y="122.91666666666666"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 364.75,122.91666666666666 h 76 v 77.08333333333334 h -76 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#005ea5"
                        width="76"
                        height="77.08333333333334"
                        x="662.25"
                        y="122.91666666666666"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 662.25,122.91666666666666 h 76 v 77.08333333333334 h -76 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
          </svg>
          <div class="recharts-legend-wrapper"
               style="position: absolute; width: 710px; height: auto; left: 60px; bottom: 50px;"
          >
            <ul class="recharts-default-legend"
                style="padding: 0px; margin: 0px; text-align: center;"
            >
              <li class="recharts-legend-item legend-item-0"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#4763a5"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Unauthorised absence rate
                </span>
              </li>
              <li class="recharts-legend-item legend-item-1"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#f5a450"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Overall absence rate
                </span>
              </li>
              <li class="recharts-legend-item legend-item-2"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#005ea5"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Authorised absence rate
                </span>
              </li>
            </ul>
          </div>
          <div class="recharts-tooltip-wrapper"
               style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
          >
            <div class="recharts-default-tooltip"
                 style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
            >
              <p class="recharts-tooltip-label"
                 style="margin: 0px;"
              >
              </p>
            </div>
          </div>
        </div>
        <div style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;">
        </div>
      </div>
    </section>
    <section class="govuk-tabs__panel panel govuk-tabs__panel--hidden"
             id="datablock_test_downloads"
             data-testid="Data downloads"
             aria-labelledby="datablock_test_downloads-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data downloads
      </h3>
      <p>
        You can customise and download data as Excel, .csv or .pdf files. Our data can also be accessed via an API.
      </p>
      <div class="govuk-inset-text">
        Data downloads have not yet been implemented within the service.
      </div>
    </section>
  </div>
</div>

`;

exports[`DataBlock datablock renders vertical chart 2`] = `

<div class="govuk-datablock"
     data-testid="DataBlock "
>
  <div class="govuk-tabs">
    <ul class="govuk-tabs__list"
        role="tablist"
    >
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a aria-controls="datablock_test_charts"
           aria-selected="true"
           role="tab"
           class="govuk-tabs__tab govuk-tabs__tab--selected"
           href="#datablock_test_charts"
           id="datablock_test_charts-tab"
        >
          Charts
        </a>
      </li>
      <li class="govuk-tabs__list-item"
          role="presentation"
      >
        <a class="govuk-tabs__tab"
           href="#datablock_test_downloads"
           id="datablock_test_downloads-tab"
           aria-controls="datablock_test_downloads"
           aria-selected="false"
           role="tab"
           tabindex="-1"
        >
          Data downloads
        </a>
      </li>
    </ul>
    <section class="govuk-tabs__panel panel"
             id="datablock_test_charts"
             data-testid="Charts"
             aria-labelledby="datablock_test_charts-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Charts
      </h3>
      <h3>
      </h3>
      <div class="recharts-responsive-container"
           style="width: 800px; height: 300px;"
      >
        <div class="recharts-wrapper"
             style="position: relative; cursor: default; width: 800px; height: 300px;"
        >
          <svg class="recharts-surface"
               width="800"
               height="300"
               viewbox="0 0 800 300"
               version="1.1"
          >
            <defs>
              <clipPath id="recharts15-clip">
                <rect x="175"
                      y="15"
                      height="185"
                      width="595"
                >
                </rect>
              </clipPath>
            </defs>
            <g class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis">
              <line class="recharts-cartesian-axis-line"
                    height="50"
                    width="595"
                    x="175"
                    y="200"
                    stroke="#666"
                    fill="none"
                    x1="175"
                    y1="200"
                    x2="770"
                    y2="200"
              >
              </line>
              <g class="recharts-cartesian-axis-ticks">
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="200"
                        stroke="#666"
                        fill="none"
                        x1="323.75"
                        y1="206"
                        x2="323.75"
                        y2="200"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="323.75"
                        y="208"
                        stroke="none"
                        fill="#666"
                        font-size="12"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="323.75"
                           dy="0.71em"
                    >
                      2014/15
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        height="50"
                        width="595"
                        x="175"
                        y="200"
                        stroke="#666"
                        fill="none"
                        x1="621.25"
                        y1="206"
                        x2="621.25"
                        y2="200"
                  >
                  </line>
                  <text height="50"
                        width="595"
                        x="621.25"
                        y="208"
                        stroke="none"
                        fill="#666"
                        font-size="12"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="middle"
                  >
                    <tspan x="621.25"
                           dy="0.71em"
                    >
                      2015/16
                    </tspan>
                  </text>
                </g>
              </g>
              <text x="472.5"
                    y="245"
                    class="recharts-text recharts-label"
                    text-anchor="middle"
              >
                <tspan x="472.5"
                       dy="0em"
                >
                  test x axis
                </tspan>
              </text>
            </g>
            <g class="recharts-cartesian-grid">
              <g class="recharts-cartesian-grid-horizontal">
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="200"
                      x2="770"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="153.75"
                      x2="770"
                      y2="153.75"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="107.5"
                      x2="770"
                      y2="107.5"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="61.25"
                      x2="770"
                      y2="61.25"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="15"
                      x2="770"
                      y2="15"
                >
                </line>
              </g>
              <g class="recharts-cartesian-grid-vertical">
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="323.75"
                      y1="15"
                      x2="323.75"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="621.25"
                      y1="15"
                      x2="621.25"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="175"
                      y1="15"
                      x2="175"
                      y2="200"
                >
                </line>
                <line stroke="#ccc"
                      fill="none"
                      x="175"
                      y="15"
                      width="595"
                      height="185"
                      x1="770"
                      y1="15"
                      x2="770"
                      y2="200"
                >
                </line>
              </g>
            </g>
            <g class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis">
              <line class="recharts-cartesian-axis-line"
                    width="115"
                    height="185"
                    x="60"
                    y="15"
                    stroke="#666"
                    fill="none"
                    x1="175"
                    y1="15"
                    x2="175"
                    y2="200"
              >
              </line>
              <g class="recharts-cartesian-axis-ticks">
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="200"
                        x2="175"
                        y2="200"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="200"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      0
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="153.75"
                        x2="175"
                        y2="153.75"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="153.75"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      3
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="107.5"
                        x2="175"
                        y2="107.5"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="107.5"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      6
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="61.25"
                        x2="175"
                        y2="61.25"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="61.25"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      9
                    </tspan>
                  </text>
                </g>
                <g class="recharts-layer recharts-cartesian-axis-tick">
                  <line class="recharts-cartesian-axis-tick-line"
                        width="115"
                        height="185"
                        x="60"
                        y="15"
                        stroke="#666"
                        fill="none"
                        x1="169"
                        y1="15"
                        x2="175"
                        y2="15"
                  >
                  </line>
                  <text width="115"
                        height="185"
                        x="167"
                        y="15"
                        stroke="none"
                        fill="#666"
                        class="recharts-text recharts-cartesian-axis-tick-value"
                        text-anchor="end"
                  >
                    <tspan x="167"
                           dy="0.355em"
                    >
                      12
                    </tspan>
                  </text>
                </g>
              </g>
              <text x="55"
                    y="107.5"
                    transform="rotate(270, 55, 107.5)"
                    class="recharts-text recharts-label"
                    text-anchor="end"
              >
                <tspan x="55"
                       dy="0.355em"
                >
                  test y axis
                </tspan>
              </text>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#4763a5"
                        width="76"
                        height="46.25"
                        x="204.75"
                        y="153.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 204.75,153.75 h 76 v 46.25 h -76 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#4763a5"
                        width="76"
                        height="46.25"
                        x="502.25"
                        y="153.75"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 502.25,153.75 h 76 v 46.25 h -76 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#f5a450"
                        width="76"
                        height="154.16666666666669"
                        x="284.75"
                        y="45.833333333333314"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 284.75,45.833333333333314 h 76 v 154.16666666666669 h -76 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#f5a450"
                        width="76"
                        height="154.16666666666669"
                        x="582.25"
                        y="45.833333333333314"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 582.25,45.833333333333314 h 76 v 154.16666666666669 h -76 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
            <g class="recharts-layer recharts-bar">
              <g class="recharts-layer recharts-bar-rectangles">
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#005ea5"
                        width="76"
                        height="77.08333333333334"
                        x="364.75"
                        y="122.91666666666666"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 364.75,122.91666666666666 h 76 v 77.08333333333334 h -76 Z"
                  >
                  </path>
                </g>
                <g class="recharts-layer recharts-bar-rectangle">
                  <path fill="#005ea5"
                        width="76"
                        height="77.08333333333334"
                        x="662.25"
                        y="122.91666666666666"
                        radius="0"
                        class="recharts-rectangle"
                        d="M 662.25,122.91666666666666 h 76 v 77.08333333333334 h -76 Z"
                  >
                  </path>
                </g>
              </g>
            </g>
          </svg>
          <div class="recharts-legend-wrapper"
               style="position: absolute; width: 710px; height: auto; left: 60px; bottom: 50px;"
          >
            <ul class="recharts-default-legend"
                style="padding: 0px; margin: 0px; text-align: center;"
            >
              <li class="recharts-legend-item legend-item-0"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#4763a5"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Unauthorised absence rate
                </span>
              </li>
              <li class="recharts-legend-item legend-item-1"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#f5a450"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Overall absence rate
                </span>
              </li>
              <li class="recharts-legend-item legend-item-2"
                  style="display: inline-block; margin-right: 10px;"
              >
                <svg class="recharts-surface"
                     width="14"
                     height="14"
                     style="display: inline-block; vertical-align: middle; margin-right: 4px;"
                     viewbox="0 0 32 32"
                     version="1.1"
                >
                  <path stroke="none"
                        fill="#005ea5"
                        d="M0,4h32v24h-32z"
                        class="recharts-legend-icon"
                  >
                  </path>
                </svg>
                <span class="recharts-legend-item-text">
                  Authorised absence rate
                </span>
              </li>
            </ul>
          </div>
          <div class="recharts-tooltip-wrapper"
               style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
          >
            <div class="recharts-default-tooltip"
                 style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
            >
              <p class="recharts-tooltip-label"
                 style="margin: 0px;"
              >
              </p>
            </div>
          </div>
        </div>
        <div style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;">
        </div>
      </div>
    </section>
    <section class="govuk-tabs__panel panel govuk-tabs__panel--hidden"
             id="datablock_test_downloads"
             data-testid="Data downloads"
             aria-labelledby="datablock_test_downloads-tab"
             role="tabpanel"
             tabindex="-1"
    >
      <h3>
        Data downloads
      </h3>
      <p>
        You can customise and download data as Excel, .csv or .pdf files. Our data can also be accessed via an API.
      </p>
      <div class="govuk-inset-text">
        Data downloads have not yet been implemented within the service.
      </div>
    </section>
  </div>
</div>

`;
